--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="pl">
+
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css">
-    <title>PixiJS - Template</title>
+    <title>Lotto Land</title>
 </head>
 
 <body>
@@ -14,4 +15,5 @@
     </div>
     <script type="module" src="/src/main.ts"></script>
 </body>
+
 </html>
